--- a/views/results.erb
+++ b/views/results.erb
@@ -7,4 +7,5 @@
 <h2>Consonants: <%= @analyzed_text.count_of_consonants%> </h2>
 <% most_used= @analyzed_text.most_used_letter%>
 
-<h2>Most Common Letter: <%= most_used.keys[0]%> used <%=most_used.values[0]%> times</h2>
+<h2>Most Common Letter: <%= most_used.keys[0]%>, used <%=most_used.values[0]%> times</h2>
+<%binding.pry%>
